--- a/methyKit_analysis.Rmd
+++ b/methyKit_analysis.Rmd
@@ -1,4 +1,11 @@
 ---
+title: "methylKit_Analysis"
+author: "Erika Bueno"
+date: "4/5/2020"
+output: html_document
+---
+
+---
 title: "R Notebook"
 output: html_notebook
 editor_options: 
