--- a/methyKit_analysis.Rmd
+++ b/methyKit_analysis.Rmd
@@ -45,6 +45,7 @@ file.list<- as.list(files)
 
 nmlist<- as.list(gsub("_1_bismark_bt2_pe.bismark.cov.gz", "", samples$V1))
 # use methRead to read in the coverage files
+
 myobj <- methRead(
   location = file.list,
   sample.id = nmlist,
@@ -95,7 +96,7 @@ filtered.myobj <- filterByCoverage(myobj,
 library(methylKit)
 
 meth <- methylKit:::readMethylBaseDB(
-                      dbpath ="C:/Users/ebuen/OneDrive/GitHub/EcolGenomics/methylBase_united.txt.bgz",
+        dbpath ="C:/Users/ebuen/OneDrive/GitHub/EcolGenomics/methylBase_united.txt.bgz",
                             dbtype = "tabix",
                             sample.id = unlist(nmlist),
                             assembly = "atonsa", # this is just a string. no actual database
@@ -116,20 +117,18 @@ pm<- percMethylation(meth)
 library(tidyr)
 # update.packages("tidyr")
 # install.packages("ggplot2")
+
 library(ggplot2)
 #plot methylation histograms
-
-
 
 ggplot(gather(as.data.frame(pm)), aes(value)) + 
     geom_histogram(bins = 10, color="black", fill="grey") + 
     facet_wrap(~key)
 
-
 # calculate and plot mean methylation
 
 dim(pm)
-sp.means<- colMeans(pm)
+sp.means<- colMeans(pm) #mean percent methylation for each treatment group
 
 sample= names(sp.means)
 group= substr(sample, 1, 6)
@@ -139,106 +138,126 @@ pf<-data.frame(sample, group, methylation)
 
 write.table(pf, file="pf.txt")
 
-data<- pf
 
-p<-ggplot(data, aes(x=data$group, y=data$methylation, color=data$group)) + stat_summary(color="black") + geom_jitter(width=0.1, size=3) 
+
+p<-ggplot(pf, aes(x=group, y=methylation, color=group)) + stat_summary(color="black") + geom_jitter(width=0.1, size=3) 
 
 print(p)
 
 require(methylKit)
 # sample clustering
-clusterSamples()
-
-clusterSamples(meth, dist="correlation", method = "ward.D", plot = TRUE)
+clusterSamples(meth, dist="correlation", method = "ward.D", plot = TRUE) #no clear clustering by treatment except for F0 generation
 
 # PCA
-PCASamples()
 
 PCASamples(meth, screeplot=TRUE)
 PCASamples(meth, screeplot=FALSE)
 
 # subset with reorganize()
-
-meth_sub <- reorganize(meth, sample.ids = c("AA_F00_1","AA_F00_2","AA_F00_3", "AA_F00_4",
-                              "HH_F25_1","HH_F25_2","HH_F25_3","HH_F25_4"), treatment = c(0,0,0,0,1,1,1,1),
+nmlist
+#Control vs Amb temp + high CO2
+meth_sub_1 <- reorganize(meth, sample.ids = c("AA_F25_1","AA_F25_2",
+                                            "AA_F25_3", "AA_F25_4",
+                                            "AH_F25_1","AH_F25_2",
+                                            "AH_F25_3","AH_F25_4"), 
+                       treatment = c(1,1,1,1,2,2,2,2), 
                        save.db = FALSE)
 
-meth_sub
+meth_sub_1
+# control vs high temp + high C02
+meth_sub_2 <- reorganize(meth, sample.ids = c("AA_F25_1","AA_F25_2",
+                                            "AA_F25_3", "AA_F25_4",
+                                            "HH_F25_1","HH_F25_2",
+                                            "HH_F25_3","HH_F25_4"), 
+                       treatment = c(1,1,1,1,4,4,4,4), 
+                       save.db = FALSE)
+
+meth_sub_2
+
                              
 # calculate differential methylation
 
-myDiff <- calculateDiffMeth(meth_sub, overdispersion = "MN", mc.cores = 1, suffix= "AA_HH",
+myDiff_1 <- calculateDiffMeth(meth_sub_1, overdispersion = "MN", mc.cores = 1, suffix= "AA_AH",
                             adjust = "qvalue",
                             test = "Chisq")
 
-
-myDiff<- getMethylDiff(myDiff, qvalue= 0.05, difference=10)
-
 # get all differentially methylated bases
 
+myDiff_1<- getMethylDiff(myDiff_1, qvalue= 0.05, difference=10)
 
 
 # we can visualize the changes in methylation frequencies quickly.
-hist(getData(myDiff)$meth.diff)
+hist(getData(myDiff_1)$meth.diff)
 # get hyper methylated bases
 
 # get hypo methylated bases
 
 #heatmaps first
-pm <- percMethylation(meth_sub)
+pm_1 <- percMethylation(meth_sub_1)
 # make a dataframe with snp id's, methylation, etc.
-sig.in <- as.numeric(row.names(myDiff))
-pm.sig <- pm[sig.in,]
+sig.in_1 <- as.numeric(row.names(myDiff_1))
+pm.sig_1 <- pm_1[sig.in_1,]
 
  
-
 # add snp, chr, start, stop
 
- pm <- percMethylation(meth_sub)
-# make a dataframe with snp id's, methylation, etc.
-sig.in <- as.numeric(row.names(myDiff))
-pm.sig <- pm[sig.in,]
+din_1 <- getData(myDiff_1)[,1:3]
+df.out_1 <- cbind(paste(getData(myDiff_1)$chr, getData(myDiff_1)$start, sep=":"), din_1, pm.sig_1)
+colnames(df.out_1) <- c("snp", colnames(din_1), colnames(df.out_1[5:ncol(df.out_1)]))
+df.out_1 <- (cbind(df.out_1,getData(myDiff_1)[,5:7]))
 
- 
 
-# add snp, chr, start, stop
 
- 
-
-din <- getData(myDiff)[,1:3]
-df.out <- cbind(paste(getData(myDiff)$chr, getData(myDiff)$start, sep=":"), din, pm.sig)
-colnames(df.out) <- c("snp", colnames(din), colnames(df.out[5:ncol(df.out)]))
-df.out <- (cbind(df.out,getData(myDiff)[,5:7]))
 
 require(pheatmap)
-my_heatmap<- pheatmap(pm.sig, show_rownames = FALSE)
+my_heatmap_1<- pheatmap(pm.sig_1, show_rownames = FALSE)
 
 
-# get percent methylation matrix
+ctrmean_1 <- rowMeans(pm.sig_1[,1:4])
 
-# make a dataframe with snp id's, methylation, etc.
+h.norm_1<- (pm.sig_1-ctrmean_1)
 
-# add snp, chr, start, stop
+my_heatmap_1 <- pheatmap(h.norm_1,
+        show_rownames = FALSE)
 
+##### if you want to change colors. only because I don't love the default colors.
+library(wesanderson)
+library(color)
+paletteLength <- 50
+# myColor <- colorRampPalette(c("cyan1", "black", "yellow1"))(paletteLength)
+# myColor<-wes_palette("Zissou1", 49, type = "continuous")
 
-####
-# heatmap
-####
-
-my_heatmap <- pheatmap()
-
-# we can also normalize 
-
-
+myColor<-colorRampPalette(rev(brewer.pal(n = 7, name ="RdYlBu")))
+myBreaks <- c(seq(min(h.norm_1), 0, length.out=ceiling(paletteLength/2) + 1), 
+              seq(max(h.norm_1)/paletteLength, max(h.norm_1), length.out=floor(paletteLength/2)))
+              
+my_heatmap_1<- pheatmap(h.norm_1,
+        color=myColor, 
+        breaks=myBreaks,
+        show_rownames = FALSE)
 
 #####
-#let's look at methylation of specific snps
+#let's look at methylation of specific gene or snp
 ####
 
-# convert data frame to long form
+df.out
+df.plot <- df.out[,c(1,5:12)] %>% pivot_longer(-snp, values_to = "methylation")
+df.plot$group <- substr(df.plot$name,1,2)
+head(df.plot)
+
+# looking at snp LS049205.1:248
+# if you choose a different snp, you can create different plots.
+
+df.plot %>% filter(snp=="LS049205.1:248") %>% 
+            ggplot(., aes(x=group, y=methylation, color=group, fill=group)) +
+              stat_summary(fun.data = "mean_se", size = 2) +
+              geom_jitter(width = 0.1, size=3, pch=21, color="black")
 
 ## write bed file for intersection with genome annotation
 
+write.table(file = "C:/Users/ebuen/OneDrive/GitHub/EcolGenomics/diffmeth.bed",
+          data.frame(chr= df.out$chr, start = df.out$start, end = df.out$end),
+          row.names=FALSE, col.names=FALSE, quote=FALSE, sep="\t")
 
 
 
